@@ -12,6 +12,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import javax.annotation.PostConstruct;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.paho.client.mqttv3.IMqttClient;
@@ -27,7 +28,7 @@ public class StressService {
 
   private final MqttAsyncService mqttAsyncService;
   private final MqttConfig mqttConfig;
-  private final StressTestConfiguration testConfiguration;
+  private final StressTestConfiguration testConfig;
   private final Map<String, StatisticRecord> processCount;
 
   @Value("${spring.task.execution.pool.core-size}")
@@ -35,14 +36,14 @@ public class StressService {
 
   private LocalDateTime endTime;
 
-  private boolean preRunChecks() {
-    if (testConfiguration.getMaximumClientIndex() > testConfiguration.getMaximumClientIndex()) {
+  private boolean isConfigurationValid() {
+    if (testConfig.getMinimumClientIndex() > testConfig.getMaximumClientIndex()) {
       log.error("The minimum index should not be bigger then the maximum index");
       return false;
     }
 
     int totalClients =
-        testConfiguration.getMaximumClientIndex() - testConfiguration.getMinimumClientIndex() + 1;
+        testConfig.getMaximumClientIndex() - testConfig.getMinimumClientIndex() + 1;
     if (executionPoolSize < totalClients) {
       log.error("The task execution pool size {} is smaller than the amount of clients {}",
           executionPoolSize, totalClients);
@@ -53,25 +54,28 @@ public class StressService {
   }
 
   @PostConstruct
-  public void startStressTest() {
-    if (!preRunChecks()) {
+  public void setupStressTest() {
+    if (!isConfigurationValid()) {
       throw new IllegalStateException(
           "Wrong configuration detected. Check the error logs for more info");
     }
 
     int totalClients =
-        testConfiguration.getMaximumClientIndex() - testConfiguration.getMinimumClientIndex() + 1;
-    endTime = LocalDateTime.now().plusSeconds(testConfiguration.getTtl());
+        testConfig.getMaximumClientIndex() - testConfig.getMinimumClientIndex() + 1;
+    endTime = LocalDateTime.now().plusSeconds(testConfig.getTtl());
     log.info("Start of stress test with {} clients sending {} data points every {} ms",
         totalClients,
-        testConfiguration.getAmountOfDataPoints(),
-        testConfiguration.getMessageDelay());
-    log.info("Will run for {} s and initiate shutdown at {}", testConfiguration.getTtl(), endTime);
+        testConfig.getAmountOfDataPoints(),
+        testConfig.getMessageDelay());
+    log.info("Will run for {} s and initiate shutdown at {}", testConfig.getTtl(), endTime);
+    log.info("Data point creation timestamp addition = {}",
+        testConfig.isIncludeCreationTimestamp());
+
     IntStream.range(
-            testConfiguration.getMinimumClientIndex(),
-            testConfiguration.getMaximumClientIndex() + 1)
+            testConfig.getMinimumClientIndex(),
+            testConfig.getMaximumClientIndex() + 1)
         .forEach(index -> {
-          String token = testConfiguration.getTokenPrefix() + index;
+          String token = testConfig.getTokenPrefix() + index;
           mqttAsyncService.createClientAndStartPublishing(
               mqttConfig.getServerUrl(),
               MqttUtils.createConnectOptions(token),
@@ -79,29 +83,37 @@ public class StressService {
         });
   }
 
-  public void publishForClient(IMqttClient client) {
+  private void publishForClient(@NonNull IMqttClient client) {
     if (LocalDateTime.now().isAfter(endTime)) {
       mqttAsyncService.stopClients();
       return;
     }
+
     LocalDateTime publishTime = LocalDateTime.now();
-    publishData(client, generateDataPoints(publishTime), publishTime);
+    List<DataPointRecord> dataPoints = generateDataPoints(
+        testConfig.getAmountOfDataPoints());
+    if (testConfig.isIncludeCreationTimestamp()) {
+      dataPoints.add(new DataPointRecord("created_at",
+          publishTime.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli()));
+    }
+    publishData(client, dataPoints, publishTime);
+
     try {
-      TimeUnit.MILLISECONDS.sleep(testConfiguration.getMessageDelay());
+      TimeUnit.MILLISECONDS.sleep(testConfig.getMessageDelay());
     } catch (InterruptedException e) {
       log.debug("Thread interrupted for client {}", client.getClientId());
     }
   }
 
-  private void publishData(IMqttClient client, List<DataPointRecord> dataPoints,
-      LocalDateTime publishTime) {
+  private void publishData(@NonNull IMqttClient client, @NonNull List<DataPointRecord> dataPoints,
+      @NonNull LocalDateTime publishTime) {
     MqttMessage msg = new MqttMessage(getJsonString(dataPoints).getBytes(StandardCharsets.UTF_8));
     msg.setQos(mqttConfig.getQosLevel());
     msg.setRetained(mqttConfig.isRetainMessages());
+
     String clientId = client.getClientId();
-    processCount.putIfAbsent(
-        clientId,
-        new StatisticRecord(LocalDateTime.now()));
+    processCount.putIfAbsent(clientId, new StatisticRecord(LocalDateTime.now()));
+
     try {
       log.debug("Publishing data with client {}", clientId);
       client.publish(mqttConfig.getTopic(), msg);
@@ -114,23 +126,17 @@ public class StressService {
     }
   }
 
-  private List<DataPointRecord> generateDataPoints(LocalDateTime publishTime) {
-    List<DataPointRecord> result = IntStream.range(1, testConfiguration.getAmountOfDataPoints())
+  private List<DataPointRecord> generateDataPoints(int amount) {
+    return IntStream.range(1, amount)
         .mapToObj(index -> {
           String key = "key_" + index;
           String value = String.valueOf(Math.random());
           return new DataPointRecord(key, value);
         })
-        .collect(Collectors.toList());
-    if (testConfiguration.isIncludeCreationTimestamp()) {
-      result.add(
-          new DataPointRecord("created_at",
-              publishTime.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli()));
-    }
-    return result;
+        .toList();
   }
 
-  private String getJsonString(List<DataPointRecord> records) {
+  private String getJsonString(@NonNull List<DataPointRecord> records) {
     return "{"
         + records.stream().map(DataPointRecord::toString).collect(Collectors.joining(","))
         + "}";
